File Name: CHANGES

09/28/2013 FASP 1.3.6:
- Modify VS08 and VS10 dependency setup.
- Update stat script.
- Change Makefile default settings for release and debug versions.
- Add a reference manual generated by Doxygen.
- Revise the user guide.
- Proof read the user guide by Xiaozhe Hu.
- Change file name in test/main: testmm --> regression_mm.
- Change file name in test/main: test_matfree --> regression_mf.

09/17/2013 FASP 1.3.5:
- If allocation memory failed, output warning and return NULL, instead of exit.
- Add safe-guard for GMRES: when memory not enough, reduce restart number.
- Fix a bug in interpolation: OMP version.
- Clean up Doxygen and modify homepage.
- Update user guide.
- Fix Doxygen errors. 
- Update VS08 and VS10 according to recent filename changes.
- Update documentation.

07/10/2013 FASP 1.3.4:
- Update VS08 and VS10 solutions.
- Add a tutorial example for GMG V-cycle.
- Fix a bug in conditional compiling caused by "omp.h".
- Revise interface for GMG.
- Fix the tutorial and test for GMG.
- Update documentation and FASP website.

06/20/2013 FASP 1.3.3:
- Add geometric multigrid for Poisson in 1,2,3D.
- Fix a bug in cfsplitting_cls.
- Update developers and website.
- Simplify standard interpolation and add more comments.
- Test cfsplitting_clsp.
- Fix a bug in GMG in 1D: convergence rate optimal.
- Improve GMG efficiency, remove unused variables, free up memory.
- Fix a bug in BSR AMG introduced earlier.

06/02/2103 FASP 1.3.2:
- Add VS2010 support.
- Fix a bug introduced in coarsening_rs in 1.3.1.
- Match regression test and update reg.out.

05/17/2013 FASP 1.3.1:
- Separate interpolation_em.c from interpolation.c.
- Make the truncation step as a stand-alone function.
- Clean up direct interpolation: without allocate a temporary P.
- Flattern nested if and for in interpolation routines.
- Further improve structure and efficiency of interpolation.
- Add a few auxiliary functions. 