@@ -98,7 +98,7 @@ int main (int argc, const char * argv[])
         fasp_dcsrvec2_read(filename1, filename2, &A, &b);
     }
     
-    else if (problem_num == 20){
+    else if (problem_num == 20) {
         
         FILE *fid;
         int i;
@@ -142,95 +142,73 @@ int main (int argc, const char * argv[])
     }
     
     else if (problem_num == 30) {
-		datafile1="Pan_mat_small.dat";
+		datafile1="Pan_mat_small.dat"; // This file is NOT in ../data!
 		strcat(filename1,datafile1);
 		
-        datafile2="Pan_rhs_small.dat";
+        datafile2="Pan_rhs_small.dat"; // This file is NOT in ../data!
 		strcat(filename2,datafile2);
 		
         fasp_dcsrvec2_read(filename1, filename2, &A, &b);
 	}
     
     else if (problem_num == 31) {
-		datafile1="Pan_mat_big.dat";
+		datafile1="Pan_mat_big.dat"; // This file is NOT in ../data!
 		strcat(filename1,datafile1);
 		
-        datafile2="Pan_rhs_big.dat";
+        datafile2="Pan_rhs_big.dat"; // This file is NOT in ../data!
 		strcat(filename2,datafile2);
 		
         fasp_dcsrvec2_read(filename1, filename2, &A, &b);
 	}
     
-    else if (problem_num == 40 ) {
-		datafile1="JumpData/mat128_p4_k8.dat";
+    else if (problem_num == 32) {
+		datafile1="Pan_mech_mat_1.dat"; // This file is NOT in ../data!
 		strcat(filename1,datafile1);
 		
-        datafile2="JumpData/rhs128_p4_k8.dat";
+        datafile2="Pan_mech_rhs_1.dat"; // This file is NOT in ../data!
+		strcat(filename2,datafile2);
+        
+        fasp_dcoo_read(filename1, &A);
+        fasp_dvec_read(filename2, &b);
+    }
+    
+    else if (problem_num == 40 ) {
+		datafile1="JumpData/mat128_p4_k8.dat"; // This file is NOT in ../data!
+		strcat(filename1,datafile1);
+		
+        datafile2="JumpData/rhs128_p4_k8.dat"; // This file is NOT in ../data!
 		strcat(filename2,datafile2);
 		
         fasp_dcoo_read(filename1, &A);
         fasp_dvec_read(filename2, &b);
 	}
     
-    else if (problem_num == 50){
+    else if (problem_num == 50) {
         
-        datafile1="spe10-uncong/SPE10120.amg";
+        datafile1="spe10-uncong/SPE10120.amg"; // This file is NOT in ../data!
 		strcat(filename1,datafile1);
     
-        datafile2="spe10-uncong/SPE10120.rhs";
+        datafile2="spe10-uncong/SPE10120.rhs"; // This file is NOT in ../data!
 		strcat(filename2,datafile2);
         
         fasp_matrix_read_bin(filename1, &A);
-        //fasp_dvec_alloc(A.row, &b);
-        //fasp_dvec_set(A.row,&b,1.0);
         fasp_dvec_read(filename2, &b);
-
-        
     }
     
-    /*
-    else if (problem_num == 32) {
-		datafile1="mech-matrix";
-		strcat(filename1,datafile1);
-		
-        datafile2="mech-load";
-		strcat(filename2,datafile2);
-		
-        fasp_dcsrvec2_read(filename1, filename2, &A, &b);
-        
-	}
-     */
-    
-    else if (problem_num == 32) {
-		datafile1="Pan_mech_mat_1.dat";
-		strcat(filename1,datafile1);
-		
-        datafile2="Pan_mech_rhs_1.dat";
-		strcat(filename2,datafile2);
-        
-        fasp_dcoo_read(filename1, &A);
-        fasp_dvec_read(filename2, &b);
-		
-        //fasp_dcsrvec2_read(filename1, filename2, &A, &b);
-        
-        //fasp_dcoo_write("Pan_mech_mat_coo.dat", &A);
-        
-    }
-        
     else {
 		printf("### ERROR: Unrecognized problem number %d\n", problem_num);
 		return ERROR_INPUT_PAR;
 	}
     
     // Print problem size
-	if (print_level>PRINT_NONE) {
+	if (print_level > PRINT_NONE) {
         printf("A: m = %d, n = %d, nnz = %d\n", A.row, A.col, A.nnz);
         printf("b: n = %d\n", b.row);
         fasp_mem_usage();
 	}
     
     // Print out solver parameters
-    if (print_level>PRINT_NONE) fasp_param_solver_print(&itparam);
+    if (print_level > PRINT_NONE) fasp_param_solver_print(&itparam);
     
     //--------------------------//
 	// Step 2. Solve the system //
@@ -238,8 +216,7 @@ int main (int argc, const char * argv[])
     
     // Set initial guess
     fasp_dvec_alloc(A.row, &x);
-    fasp_dvec_set(A.row,&x,0.0);
-    //fasp_dvec_rand(A.row,&x);
+    fasp_dvec_set(A.row,&x,0.0);   // fasp_dvec_rand(A.row,&x);
 
     // Preconditioned Krylov methods
     if ( solver_type >= 1 && solver_type <= 20) {
@@ -256,23 +233,19 @@ int main (int argc, const char * argv[])
         
 		// Using AMG as preconditioner for Krylov iterative methods
 		else if (precond_type == PREC_AMG || precond_type == PREC_FMG) {
-            printf("level = %d\n", amgparam.aggressive_level);
-            if (print_level>PRINT_NONE) fasp_param_amg_print(&amgparam);
-            //amgparam.smooth_order=NO_ORDER;
+            if (print_level > PRINT_NONE) fasp_param_amg_print(&amgparam);
 			status = fasp_solver_dcsr_krylov_amg(&A, &b, &x, &itparam, &amgparam);
-            //fasp_dvec_print(10, &x);
-            //fasp_dvec_write("solu.dat", &x);
 		}
         
 		// Using ILU as preconditioner for Krylov iterative methods Q: Need to change!
 		else if (precond_type == PREC_ILU) {
-            if (print_level>PRINT_NONE) fasp_param_ilu_print(&iluparam);
+            if (print_level > PRINT_NONE) fasp_param_ilu_print(&iluparam);
 			status = fasp_solver_dcsr_krylov_ilu(&A, &b, &x, &itparam, &iluparam);
 		}
         
         // Using Schwarz as preconditioner for Krylov iterative methods
         else if (precond_type == PREC_SCHWARZ){
-            if (print_level>PRINT_NONE) fasp_param_schwarz_print(&swzparam);
+            if (print_level > PRINT_NONE) fasp_param_schwarz_print(&swzparam);
 			status = fasp_solver_dcsr_krylov_schwarz(&A, &b, &x, &itparam, &swzparam);
 		}
         
@@ -285,14 +258,14 @@ int main (int argc, const char * argv[])
     
     // AMG as the iterative solver
 	else if (solver_type == SOLVER_AMG) {
-        if (print_level>PRINT_NONE) fasp_param_amg_print(&amgparam);
+        if (print_level > PRINT_NONE) fasp_param_amg_print(&amgparam);
 		fasp_solver_amg(&A, &b, &x, &amgparam); 
         
 	}
 
     // Full AMG as the iterative solver 
     else if (solver_type == SOLVER_FMG) {
-        if (print_level>PRINT_NONE) fasp_param_amg_print(&amgparam);
+        if (print_level > PRINT_NONE) fasp_param_amg_print(&amgparam);
         fasp_solver_famg(&A, &b, &x, &amgparam);
     }
     
@@ -319,9 +292,6 @@ int main (int argc, const char * argv[])
 	else {
 		printf("\nSolver finished successfully!\n\n");
 	}
-    
-    //fasp_dvec_write("solu.dat", &x);
-    //fasp_dvec_print(10, &x);
     
     if (output_type) fclose (stdout);
             
